--- a/assignment_2/assignment_2.tex
+++ b/assignment_2/assignment_2.tex
@@ -90,7 +90,7 @@
 \title{
   \huge{Compilers\\}
 \vspace{3cm}
-\Large{\nth{1} Weekly Assignment}
+\Large{\nth{2} Weekly Assignment}
 }
 
 \begin{document}
@@ -122,7 +122,11 @@
 \end{enumerate}
 
 
-\section{Task 2}
+\section{Task 2 \& 3}
+
+Hej Niels,
+
+jeg har simpelthen ikke forstået de her emner, selvom jeg både har fulgt forelæsningerne, læst afsnittene og gen-læst slidesne. Kan du hjælpe mig med det her til næste øvelsestime?
 
 
 
