--- a/assignment_2/assignment_2.tex
+++ b/assignment_2/assignment_2.tex
@@ -122,12 +122,22 @@
 \end{enumerate}
 
 
-\section{Task 2 \& 3}
+\section{Task 2}
+\begin{enumerate}
+	\item[a.)] (’a -> bool) -> ’a list -> ’a list
+	\item[b.)]
+\end{enumerate}
 
-Hej Niels,
 
-jeg har simpelthen ikke forstået de her emner, selvom jeg både har fulgt forelæsningerne, læst afsnittene og gen-læst slidesne. Kan du hjælpe mig med det her til næste øvelsestime?
+\section{Task 3}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{img/mgu}
+	\caption{MGU applied to the given unification graph.}
+	\label{fig:mgu}
+\end{figure}
 
+$\alpha$ is the type \textit{list(int)}, $\beta$ is the type \textit{list(list(int))} and the unified type is \textit{list(int) * list(list(int))}.
 
 
 \newpage
